fixed issue with align items in portfolio divs

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -64,13 +64,16 @@
 }
 
 @media (max-width: 1050px) {
+
+    .project-01, .project-02, .project-03, .project-04 {
+        justify-content: center;
+        align-items: start;
+    }
     .project-01, .project-03 {
         flex-direction: column;
-        justify-content: center;
     }
     .project-02, .project-04 {
         flex-direction: column-reverse;
-        justify-content: center;
     }
     .project-caption, .project-img {
         width: 100% !important;
