--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -12,6 +12,7 @@
     }
     & .project-01, .project-02, .project-03, .project-04 {
         display: flex;
+        align-items: center;
         & .project-img { 
             margin-right: 40px;
             width: 50%;
